# elastro

./: .bumpversion.cfg  .gitignore  README.md  bump_build_publish.sh  debug_connection.py  docker-compose.yml  pyproject.toml  run_tests.sh  setup.py  test_es.py
tests/: README.md
