[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elastro"
version = "0.1.0"
description = "A comprehensive Python library for Elasticsearch management with both programmatic and CLI interfaces"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Austin Jorgensen"},
]
urls = {Homepage = "https://github.com/Fremen-Labs", Repository = "https://github.com/Fremen-Labs/elastro"}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database API",
]
dependencies = [
    "elasticsearch>=8.18.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "pydantic==2.11.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.9.0",
    "flake8>=4.0.0",
]

[project.scripts]
elastic-cli = "elastro.cli.cli:main"

[tool.setuptools]
packages = ["elastro"] 